cmake_minimum_required (VERSION 2.6)
project (avmeshlib)
enable_language (Fortran)
enable_testing ()
set(TEST_NATIVE_FORTRAN_READ YES)
if (EXISTS "${GTEST_DIR}")
   SET (BUILD_UNIT_TESTS YES)
   include_directories ("${GTEST_DIR}/include")
   link_directories ("${GTEST_DIR}/lib")
endif (EXISTS "${GTEST_DIR}")
if (ENABLE_PYTHON)
   find_package (SWIG REQUIRED)
   include (UseSWIG)
   include (FindPythonInterp)
   include (FindPythonLibs)
   include_directories (${PYTHON_INCLUDE_DIRS})
endif (ENABLE_PYTHON)

IF(COMPILER_FAMILY STREQUAL "portland")
   SET(CMAKE_Fortran_FLAGS "-fPIC -fast -Kieee -Mpreprocess -Mdalign -Mllalign -DPP_GRAVITY -DPP_DOUBLE -DPP_GRIDDEFORM -pc 64 -Mrecursive -Minform=warn")
ELSEIF(COMPILER_FAMILY STREQUAL "intel")
   SET(CMAKE_Fortran_FLAGS "-DINTEL -fpe0 -traceback -fPIC -O3 -fpp -align sequence -DPP_GRAVITY -DPP_DOUBLE -DPP_GRIDDEFORM -recursive -heap-arrays 10 -vec-report0 -diag-disable 8291,8293")
ENDIF()


#add_subdirectory (doc)
add_subdirectory (src)
# No longer build mesh conversion tools (KES-2253)
#add_subdirectory (tools)
